--- a/package.json
+++ b/package.json
@@ -1,20 +1,37 @@
 {
-  "name": "glplay",
+  "name": "ignews",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "slicemachine": "start-slicemachine"
   },
   "dependencies": {
+    "@prismicio/client": "^6.7.1",
+    "@prismicio/helpers": "^2.3.5",
+    "@prismicio/react": "^2.5.0",
+    "@prismicio/slice-simulator-react": "^0.2.2",
+    "faunadb": "^4.6.0",
     "next": "12.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@stripe/stripe-js": "^1.36.0",
+    "@types/next-auth": "^3.15.0",
+    "@types/node": "^18.7.14",
+    "@types/react": "^18.0.18",
+    "axios": "^0.27.2",
     "eslint": "8.23.0",
-    "eslint-config-next": "12.2.5"
+    "eslint-config-next": "12.2.5",
+    "next-auth": "^4.10.3",
+    "react-icons": "^4.4.0",
+    "sass": "^1.54.6",
+    "slice-machine-ui": "^0.5.0",
+    "stripe": "^10.7.0",
+    "typescript": "^4.8.2"
   }
 }
