Implemented subscription validation and state updates.

--- a/.slicemachine/mock-config.json
+++ b/.slicemachine/mock-config.json
@@ -1,5 +1,12 @@
 {
   "_cts": {
-    "post": {}
+    "post": {
+      "content": {
+        "config": {
+          "patternType": "PARAGRAPH",
+          "blocks": 1
+        }
+      }
+    }
   }
 }
